Melhorias no menu e correção do game over